--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,19 @@
-Django>=5.2
-psycopg2-binary
-djangorestframework
-cloudinary
-django-cloudinary-storage
-gunicorn
-pillow
-django-cors-headers
+asgiref==3.8.1
+certifi==2025.1.31
+charset-normalizer==3.4.1
+cloudinary==1.44.0
+Django==5.2
+django-cloudinary-storage==0.3.0
+django-cors-headers==4.7.0
+djangorestframework==3.16.0
+gunicorn==23.0.0
+idna==3.10
+packaging==25.0
+pillow==11.2.1
+psycopg2-binary==2.9.10
+python-dotenv==1.1.0
+requests==2.32.3
+six==1.17.0
+sqlparse==0.5.3
+urllib3==2.4.0
+whitenoise==6.9.0
